--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [project]
 name = "medvae"
-version = "0.0.3"
+version = "0.0.4"
 requires-python = ">=3.9"
-description = "Med-VAE is a family of six medical image autoencoders that can encode high-dimensional medical images into latent representation."
+description = "MedVAE is a family of six medical image autoencoders that can encode high-dimensional medical images into latent representations."
 readme = "README.md"
 license = { file = "LICENSE" }
 authors = [
@@ -77,7 +77,7 @@ requires = ["setuptools>=67.8.0"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
-include = ["medvae"]
+include = ["medvae", "medvae.utils", "medvae.models", "medvae.utils.vae"]
 exclude = ["assets", "documentation"]
 
 [tool.codespell]
