--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,7 +58,15 @@ dependencies = [
     "monai>=1.3.2",
     "torchvision>=0.19.1",
     "gdown",
-    "nilearn"
+    "nilearn",
+    "pyrootutils",
+    "hydra-core",
+    "lora-diffusion@git+https://github.com/cloneofsimo/lora.git",
+    "torchmetrics",
+    "hydra-colorlog",
+    "open_clip_torch==2.24.0",
+    "polars==0.19.10",
+    "rich"
 ]
 
 [project.urls]
@@ -67,6 +75,7 @@ repository = "https://github.com/StanfordMIMI/MedVAE"
 
 [project.scripts]
 medvae_inference = "medvae.medvae_inference:main"
+medvae_finetune = "medvae.medvae_finetune:main"
 
 [project.optional-dependencies]
 dev = [
@@ -81,7 +90,7 @@ build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
 include = ["medvae", "medvae.utils", "medvae.models", "medvae.utils.vae"]
-exclude = ["documentation"]
+exclude = ["documentation", "configs"]
 
 [tool.codespell]
 skip = '.git,*.pdf,*.svg, *.png'
