fixed gitignore plus s2 capability

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ share/python-wheels/
 *.egg
 MANIFEST
 metrics/
+!configs/metrics/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -59,3 +60,6 @@ coverage.xml
 
 # Data files
 data/
+
+# Log files
+logs/
