--- a/configs/experiment/medvae_2d_finetuning.yaml
+++ b/configs/experiment/medvae_2d_finetuning.yaml
@@ -8,8 +8,9 @@ defaults:
 task_name: mmg_finetuning
 input: /data/akkumar/MedVAE/documentation/data/mmg_data
 output: /data/akkumar/MedVAE/documentation/data/model_weights
-model_name: medvae_4_4_2d
+model_name: medvae_4_1_2d
 dataset_name: mmg_data
+stage2: false
 device: cuda
 
 # Training parameters to change
