--- a/configs/experiment/medvae_2d_finetuning.yaml
+++ b/configs/experiment/medvae_2d_finetuning.yaml
@@ -3,6 +3,7 @@
 defaults:
   - override /criterion: lpips_with_discriminator.yaml
   - override /dataloader: mmgs.yaml
+  - override /metrics: reconstruction_minimal.yaml
 
 # Finetuning parameters to change
 task_name: mmg_finetuning
@@ -17,7 +18,7 @@ device: cuda
 mixed_precision: "no"
 gradient_accumulation_steps: 2
 max_epoch: 100
-batch_size: 2
+batch_size: 32
 log_every_n_steps: 20
 base_learning_rate: 4.5e-6
 ema_decay: null
