metric gitignore fix

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,7 @@ share/python-wheels/
 MANIFEST
 metrics/
 !configs/metrics/
+!medvae/metrics/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
