--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,7 +66,8 @@ dependencies = [
     "hydra-colorlog",
     "open_clip_torch==2.24.0",
     "polars==0.19.10",
-    "rich"
+    "rich",
+    "clip@git+https://github.com/openai/CLIP.git"
 ]
 
 [project.urls]
