--- a/configs/experiment/medvae_4x_1c_3d_finetuning.yaml
+++ b/configs/experiment/medvae_4x_1c_3d_finetuning.yaml
@@ -1,24 +1,21 @@
 # @package _global_
 
 defaults:
-  - override /dataloader: mmgs.yaml
+  - override /dataloader: mri_ct_3d.yaml
   - override /metrics: reconstruction_minimal.yaml
   - override /criterion: lpips_with_discriminator.yaml
 
 # Finetuning parameters to change
-task_name: mmg_finetuning
-input: /data/akkumar/MedVAE/documentation/data/mmg_data
-output: /data/akkumar/MedVAE/documentation/data/model_weights
-model_name: medvae_4_1_2d
-dataset_name: mmg_data
+task_name: mri_ct_finetuning
+model_name: medvae_4_1_3d
 stage2: false
 device: cuda
 
 # Training parameters to change
 mixed_precision: "no"
-gradient_accumulation_steps: 2
-max_epoch: 100
-batch_size: 2
+gradient_accumulation_steps: 1
+max_epoch: 6400
+batch_size: 4
 log_every_n_steps: 20
 base_learning_rate: 4.5e-6
 ema_decay: null
