--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,6 +77,7 @@ repository = "https://github.com/StanfordMIMI/MedVAE"
 [project.scripts]
 medvae_inference = "medvae.medvae_inference:main"
 medvae_finetune = "medvae.medvae_finetune:main"
+medvae_finetune_s2 = "medvae.medvae_finetune_s2:main"
 
 [project.optional-dependencies]
 dev = [
