--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,39 +34,39 @@ keywords = [
     'medvae'
 ]
 dependencies = [
-    "torch>=2.4.1",
-    "accelerate>=0.34.2",
+    "torch>=2.4.1", # tested using 2.6.0
+    "accelerate>=0.34.2", # tested using 0.34.2
     "wandb==0.14.0",
-    "tqdm",
-    "dicom2nifti",
-    "scipy",
-    "batchgenerators>=0.25",
-    "numpy>=1.24",
-    "scikit-learn",
-    "scikit-image>=0.19.3",
-    "SimpleITK>=2.4.0",
-    "omegaconf>=2.3.0",
-    "pandas",
-    'requests',
-    "nibabel",
-    "matplotlib",
-    "seaborn",
-    "imagecodecs",
-    "yacs",
-    "batchgeneratorsv2>=0.2",
-    "einops>=0.8.0",
-    "monai>=1.3.2",
-    "torchvision>=0.19.1",
-    "gdown",
-    "nilearn",
-    "pyrootutils",
-    "hydra-core",
-    "torchmetrics",
-    "hydra-colorlog",
+    "tqdm", # tested using 4.67.1
+    "dicom2nifti", # tested using 2.5.1
+    "scipy", # tested using 1.13.1
+    "batchgenerators>=0.25", # tested using 0.25.1
+    "numpy>=1.24", # tested using 1.26.4
+    "scikit-learn", # tested using 1.6.1
+    "scikit-image>=0.19.3", # tested using 0.24.0
+    "SimpleITK>=2.4.0", # tested using 2.4.1
+    "omegaconf>=2.3.0", # tested using 2.3.0
+    "pandas", # tested using 2.2.3
+    'requests', # tested using 2.32.3
+    "nibabel", # tested using 5.3.2
+    "matplotlib", # tested using 3.9.4
+    "seaborn", # tested using 0.13.2
+    "imagecodecs", # tested using 2024.12.30
+    "yacs", # tested using 0.1.8
+    "batchgeneratorsv2>=0.2", # tested using 0.2.3
+    "einops>=0.8.0", # tested using 0.8.1
+    "monai>=1.3.2", # tested using 1.4.0
+    "torchvision>=0.19.1", # tested using 0.21.0
+    "gdown", # tested using 5.2.0
+    "nilearn", # tested using 0.11.1
+    "pyrootutils", # tested using 1.0.4
+    "hydra-core", # tested using 1.3.2
+    "torchmetrics", # tested using 1.7.0
+    "hydra-colorlog", # tested using 1.2.0
     "open_clip_torch==2.24.0",
     "polars==0.19.10",
-    "rich",
-    "clip@git+https://github.com/openai/CLIP.git"
+    "rich", # tested using 13.9.4
+    "clip@git+https://github.com/openai/CLIP.git" # tested using 1.0
 ]
 
 [project.urls]
